# Sub-Project-1-for-SSC-Scanning

./: pyproject.toml  requirements.txt
.github/workflows/: generate_sbom_trivy.yml  security_scanning.yml
